--- a/.github/workflows/dev_deploy.yml
+++ b/.github/workflows/dev_deploy.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Set up Python 3.9
         uses: actions/setup-python@v4
         with:
-          python-version: ["3.9"]
+          python-version: "3.9"
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
