--- a/.github/workflows/dev_deploy.yml
+++ b/.github/workflows/dev_deploy.yml
@@ -36,16 +36,8 @@ jobs:
         with:
           version: 1.1.0
 
-      - name: Setup Terragrunt
-        uses: autero1/action-terragrunt@v1.1.0
-        with:
-          terragrunt_version: latest
-          token: ${{ secrets.GH_PAT }}
-
-      - name: Plan Terragrunt
-        working-directory: dev/eu-west-2/dev
-        run: terragrunt run-all plan --terragrunt-non-interactive
-
-      - name: Apply Terragrunt
-        working-directory: dev/eu-west-2/dev
-        run: terragrunt run-all apply --terragrunt-non-interactive
+      - name: Terraform apply
+        run: |
+          terraform init
+          terraform plan
+          terraform apply -auto-approve
