update destroy workflow

--- a/.github/workflows/dev_destroy.yml
+++ b/.github/workflows/dev_destroy.yml
@@ -1,8 +1,13 @@
 name: Dev Destroy
 
 on:
-  push:
-    branches: main
+  workflow_call:
+    inputs:
+      command:
+        description: "Destroy command"
+        default: "destroy"
+        required: true
+        type: string
 
 jobs:
   destroy:
