--- a/.github/workflows/dev_destroy.yml
+++ b/.github/workflows/dev_destroy.yml
@@ -31,4 +31,7 @@ jobs:
           version: 1.1.0
 
       - name: Terraform apply
-        run: terraform apply -destroy
+        run: |
+          terraform init
+          terraform plan
+          terraform apply -destroy -auto-approve
