--- a/.github/workflows/dev_deploy.yml
+++ b/.github/workflows/dev_deploy.yml
@@ -31,12 +31,16 @@ jobs:
         run: |
           python -m pip install --upgrade pip
 
-      - name: Install Terraform
-        uses: little-core-labs/install-terraform@v2.0.0
-        with:
-          version: 1.1.0
+      - name: Prepare Terraform
+        uses: hashicorp/setup-terraform@v2
 
-      - name: Terraform apply
+      - name: Plan Terraform
+        run: |
+          cd terraform
+          terraform init
+          terraform plan
+
+      - name: Apply Terraform
         run: |
           terraform init
           terraform plan
