--- a/.github/workflows/dev_destroy.yml
+++ b/.github/workflows/dev_destroy.yml
@@ -25,10 +25,14 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-west-2
 
-      - name: Install Terraform
-        uses: little-core-labs/install-terraform@v2.0.0
-        with:
-          version: 1.1.0
+      - name: Terraform Plan Destroy
+        run: |
+          cd terraform
+          terraform init
+          terraform plan -destroy
 
-      - name: Terraform apply
-        run: terraform apply -destroy -auto-approve
+      - name: Terraform Apply Destroy
+        run: |
+          cd terraform
+          terraform init
+          terraform apply -destroy -auto-approve
