--- a/.github/workflows/dev_destroy.yml
+++ b/.github/workflows/dev_destroy.yml
@@ -1,7 +1,7 @@
 name: Dev Destroy
 
 on:
-  workflow_call:
+  workflow_dispatch:
     inputs:
       command:
         description: "Destroy command"
