--- a/.github/workflows/dev_deploy.yml
+++ b/.github/workflows/dev_deploy.yml
@@ -31,6 +31,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
 
+      - name: Run Tests
+        run: python -m pytest
+
       - name: Prepare Terraform
         uses: hashicorp/setup-terraform@v2
 
