--- a/.github/workflows/dev_deploy.yml
+++ b/.github/workflows/dev_deploy.yml
@@ -42,11 +42,11 @@ jobs:
         run: |
           cd terraform
           terraform init
-          terraform plan
+          terraform plan -var aws_account_id={{ secrets.AWS_ACCOUNT_ID }}
 
       - name: Apply Terraform
         run: |
           cd terraform
           terraform init
           terraform plan
-          terraform apply -auto-approve
+          terraform apply -var aws_account_id={{ secrets.AWS_ACCOUNT_ID }} -auto-approve
