--- a/.github/workflows/dev_deploy.yml
+++ b/.github/workflows/dev_deploy.yml
@@ -42,10 +42,10 @@ jobs:
         run: |
           cd terraform
           terraform init
-          terraform plan -var aws_account_id=${{ secrets.AWS_ACCOUNT_ID }}
+          terraform plan
 
       - name: Apply Terraform
         run: |
           cd terraform
           terraform init
-          terraform apply -var aws_account_id=${{ secrets.AWS_ACCOUNT_ID }} -auto-approve
+          terraform apply -auto-approve
